Fixed code not complying with rules of 10.